[package]
name = "rs-macro-di"
version = "0.2.5"
edition = "2021"
authors = ["Steeoghr"]
description = "Rust dependency injection by macro"
homepage = "https://github.com/Steeoghr/rs-macro-di"
repository = "https://github.com/Steeoghr/rs-macro-di"
license = "MIT"

[dependencies]
once_cell = "1.10.0"
chrono = "0.4"
syn = "1.0"
quote = "1.0"
proc-macro = "1.0"
proc-macro2 = "1.0"