[package]
name = "rs-macro-di"
version = "0.3.0"
edition = "2021"
authors = ["Steeoghr"]
description = "Rust dependency injection by macro"
homepage = "https://github.com/Steeoghr/rs-macro-di"
repository = "https://github.com/Steeoghr/rs-macro-di"
license = "MIT"


[dependencies]
proc-macro2 = "1.0.83"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
inventory = "0.1.10"
once_cell = "1.9.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rs-web-host = "0.1.5"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
